endpoint update user
